--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+body{
+  margin:0px;
+  padding:0px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.projects-page{
+  height: 100vh;
+  display:flex;
+  flex-direction:column;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.project-details-container{
+  display:flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  flex-shrink: 0;
+  flex-grow: 1;
+  overflow-y: auto;
 }
+.project-details-container-heading{
+  font-size: 36px;
+  font-weight: bold;
+  color: rgba(10, 54, 121, 0.945);
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.project-details-container-description{
+  max-width:700px;
+  align-self: center;
+  text-align: center;
+  
+  
+}
+.tabs-container{
+  display:flex;
+  flex-direction:row;
+  justify-content: center;
+  list-style-type: none;
+  padding:0px;
+}
+.projects-container{
+  list-style-type:none;
+  padding:0px;
+  display:flex;
+  flex-direction:row;
+  justify-content: center;
+  flex-wrap:wrap;
+  flex-grow: 1;
+  overflow-y: auto;
+  
 }
